f2: use bnt workflows

--- a/.github/workflows/backend-review.yml
+++ b/.github/workflows/backend-review.yml
@@ -1,13 +1,14 @@
 name: Backend Unit Tests
 on:
-  pull_request:
-    branches:
-      - main
-      - dev
-      - release/*
-    paths:
-      - 'api/**'
-      - 'packages/**'
+  workflow_dispatch
+#   pull_request:
+#     branches:
+#       - main
+#       - dev
+#       - release/*
+#     paths:
+#       - 'api/**'
+#       - 'packages/**'
 jobs:
   tests_Backend:
     name: Run Backend unit tests
