--- a/.github/workflows/cache-integration-tests.yml
+++ b/.github/workflows/cache-integration-tests.yml
@@ -1,21 +1,25 @@
 name: Cache Integration Tests
 
 on:
-  pull_request:
-    branches:
-      - main
-      - dev
-      - release/*
-    paths:
-      - 'packages/api/src/cache/**'
-      - 'packages/api/src/cluster/**'
-      - 'packages/api/src/mcp/**'
-      - 'redis-config/**'
-      - '.github/workflows/cache-integration-tests.yml'
+  workflow_dispatch:
+     inputs:
+      run_workflow:
+        description: 'Set to true to run this workflow'
+        required: true
+        default: 'false'
+  # pull_request:
+  #   branches:
+  #     - main
+  #     - dev
+  #     - release/*
+  #   paths:
+  #     - 'packages/api/src/cache/**'
+  #     - 'redis-config/**'
+  #     - '.github/workflows/cache-integration-tests.yml'
 
 jobs:
   cache_integration_tests:
-    name: Integration Tests that use actual Redis Cache
+    name: Run Cache Integration Tests
     timeout-minutes: 30
     runs-on: ubuntu-latest
 
@@ -61,23 +65,14 @@ jobs:
           npm run build:data-schemas
           npm run build:api
 
-      - name: Run all cache integration tests (Single Redis Node)
+      - name: Run cache integration tests
         working-directory: packages/api
         env:
           NODE_ENV: test
           USE_REDIS: true
-          USE_REDIS_CLUSTER: false
           REDIS_URI: redis://127.0.0.1:6379
-        run: npm run test:cache-integration
-
-      - name: Run all cache integration tests (Redis Cluster)
-        working-directory: packages/api
-        env:
-          NODE_ENV: test
-          USE_REDIS: true
-          USE_REDIS_CLUSTER: true
-          REDIS_URI: redis://127.0.0.1:7001,redis://127.0.0.1:7002,redis://127.0.0.1:7003
-        run: npm run test:cache-integration
+          REDIS_CLUSTER_URI: redis://127.0.0.1:7001,redis://127.0.0.1:7002,redis://127.0.0.1:7003
+        run: npm run test:cache:integration
 
       - name: Stop Redis Cluster
         if: always()
