--- a/.github/workflows/dev-branch-images.yml
+++ b/.github/workflows/dev-branch-images.yml
@@ -2,13 +2,13 @@ name: Docker Dev Branch Images Build
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - dev
-    paths:
-      - 'api/**'
-      - 'client/**'
-      - 'packages/**'
+  # push:
+  #   branches:
+  #     - dev
+  #   paths:
+  #     - 'api/**'
+  #     - 'client/**'
+  #     - 'packages/**'
 
 jobs:
   build:
