--- a/.github/workflows/dev-images.yml
+++ b/.github/workflows/dev-images.yml
@@ -1,14 +1,15 @@
 name: Docker Dev Images Build
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
-    paths:
-      - 'api/**'
-      - 'client/**'
-      - 'packages/**'
+  workflow_dispatch
+  #workflow_dispatch:
+  #push:
+  #  branches:
+  #    - main
+  #  paths:
+  #    - 'api/**'
+  #    - 'client/**'
+  #    - 'packages/**'
 
 jobs:
   build:
