--- a/.github/workflows/helmcharts.yml
+++ b/.github/workflows/helmcharts.yml
@@ -2,9 +2,11 @@ name: Build Helm Charts on Tag
 
 # The workflow is triggered when a tag is pushed
 on:
-  push:
-    tags:
-      - "chart-*"
+  workflow_dispatch
+
+  # push:
+  #   tags:
+  #     - "chart-*"
 
 jobs:
   release:
