--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -1,15 +1,16 @@
 name: Lint for accessibility issues
 
 on:
-  pull_request:
-    paths:
-      - 'client/src/**'
-  workflow_dispatch:
-    inputs:
-      run_workflow:
-        description: 'Set to true to run this workflow'
-        required: true
-        default: 'false'
+  workflow_dispatch
+  #pull_request:
+  #  paths:
+  #    - 'client/src/**'
+  #workflow_dispatch:
+  #  inputs:
+  #    run_workflow:
+  #      description: 'Set to true to run this workflow'
+  #      required: true
+  #      default: 'false'
 
 jobs:
   axe-linter:
