--- a/.github/workflows/data-provider.yml
+++ b/.github/workflows/data-provider.yml
@@ -1,17 +1,12 @@
-name: Publish `librechat-data-provider` to NPM
+name: Node.js Package
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'packages/data-provider/package.json'
-  workflow_dispatch:
-    inputs:
-      reason:
-        description: 'Reason for manual trigger'
-        required: false
-        default: 'Manual publish requested'
+  workflow_dispatch
+  #push:
+  #  branches:
+  #    - main
+  #  paths:
+  #    - 'packages/data-provider/package.json'
 
 jobs:
   build:
@@ -20,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 16
       - run: cd packages/data-provider && npm ci
       - run: cd packages/data-provider && npm run build
 
@@ -31,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 16
           registry-url: 'https://registry.npmjs.org'
       - run: cd packages/data-provider && npm ci
       - run: cd packages/data-provider && npm run build
