--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,46 +1,51 @@
-name: Update Test Server
+name: Deploy to Azure Dev Subscription
 
 on:
-  workflow_run:
-    workflows: ["Docker Dev Branch Images Build"]
-    types:
-      - completed
-  workflow_dispatch:
+  workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
+
+env:
+  DOCKER_IMAGE_NAME: genai-chatbnt  
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    if: |
-      github.repository == 'danny-avila/LibreChat' &&
-      (github.event_name == 'workflow_dispatch' || 
-       (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'dev'))
+  build-and-deploy:
+    runs-on: LargerGitHubRunner4Core150GB
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v2
+    - uses: azure/login@a65d910e8af852a8061c627c456678983e180302
       with:
-        key: ${{ secrets.DO_SSH_PRIVATE_KEY }}
-        known_hosts: ${{ secrets.DO_KNOWN_HOSTS }}
+        creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL_DEPLOYMENT_CREDS }}
 
-    - name: Run update script on DigitalOcean Droplet
-      env:
-        DO_HOST: ${{ secrets.DO_HOST }}
-        DO_USER: ${{ secrets.DO_USER }}
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build frontend
+      run: npm run frontend
+
+    - name: Build app as a Docker image
       run: |
-        ssh -o StrictHostKeyChecking=no ${DO_USER}@${DO_HOST} << EOF
-        sudo -i -u danny bash << 'EEOF'
-        cd ~/LibreChat && \
-        git fetch origin main && \
-        sudo npm run stop:deployed && \
-        sudo docker images --format "{{.Repository}}:{{.ID}}" | grep -E "lc-dev|librechat" | cut -d: -f2 | xargs -r sudo docker rmi -f || true && \
-        sudo npm run update:deployed && \
-        git checkout dev && \
-        git pull origin dev && \
-        git checkout do-deploy && \
-        git rebase dev && \
-        sudo npm run start:deployed && \
-        echo "Update completed. Application should be running now."
-        EEOF
-        EOF
+        image_name="$DOCKER_IMAGE_NAME:${{ github.sha }}"
+        docker build -t $image_name --label "branch=${{ github.ref }}" --label "commit=${{ github.sha }}" .
+
+    - name: Push the image to Azure Container Registry and tag as latest
+      run: |
+        echo "Logging into Azure Container Registry acrchatbntdev"
+        az acr login --name acrchatbntdev
+        image_name="$DOCKER_IMAGE_NAME:${{ github.sha }}"
+        docker push $image_name
+        docker tag $image_name "$DOCKER_IMAGE_NAME:latest"
+        docker push "$DOCKER_IMAGE_NAME:latest"
+    
+    - name: logout
+      run: |
+        az logout
