--- a/.github/workflows/i18n-unused-keys.yml
+++ b/.github/workflows/i18n-unused-keys.yml
@@ -1,18 +1,11 @@
 name: Detect Unused i18next Strings
 
-# This workflow checks for unused i18n keys in translation files.
-# It has special handling for:
-# - com_ui_special_var_* keys that are dynamically constructed
-# - com_agents_category_* keys that are stored in the database and used dynamically
-
 on:
-  pull_request:
-    paths:
-      - "client/src/**"
-      - "api/**"
-      - "packages/data-provider/src/**"
-      - "packages/client/**"
-      - "packages/data-schemas/src/**"
+  workflow_dispatch
+  #pull_request:
+  #  paths:
+  #    - "client/src/**"
+  #    - "api/**"
 
 jobs:
   detect-unused-i18n-keys:
@@ -30,7 +23,7 @@ jobs:
 
           # Define paths
           I18N_FILE="client/src/locales/en/translation.json"
-          SOURCE_DIRS=("client/src" "api" "packages/data-provider/src" "packages/client" "packages/data-schemas/src")
+          SOURCE_DIRS=("client/src" "api" "packages/data-provider/src" "packages/client")
 
           # Check if translation file exists
           if [[ ! -f "$I18N_FILE" ]]; then
@@ -47,60 +40,12 @@ jobs:
           # Check if each key is used in the source code
           for KEY in $KEYS; do
             FOUND=false
-            
-            # Special case for dynamically constructed special variable keys
-            if [[ "$KEY" == com_ui_special_var_* ]]; then
-              # Check if TSpecialVarLabel is used in the codebase
-              for DIR in "${SOURCE_DIRS[@]}"; do
-                if grep -r --include=\*.{js,jsx,ts,tsx} -q "TSpecialVarLabel" "$DIR"; then
-                  FOUND=true
-                  break
-                fi
-              done
-              
-              # Also check if the key is directly used somewhere
-              if [[ "$FOUND" == false ]]; then
-                for DIR in "${SOURCE_DIRS[@]}"; do
-                  if grep -r --include=\*.{js,jsx,ts,tsx} -q "$KEY" "$DIR"; then
-                    FOUND=true
-                    break
-                  fi
-                done
+            for DIR in "${SOURCE_DIRS[@]}"; do
+              if grep -r --include=\*.{js,jsx,ts,tsx} -q "$KEY" "$DIR"; then
+                FOUND=true
+                break
               fi
-            # Special case for agent category keys that are dynamically used from database
-            elif [[ "$KEY" == com_agents_category_* ]]; then
-              # Check if agent category localization is being used
-              for DIR in "${SOURCE_DIRS[@]}"; do
-                # Check for dynamic category label/description usage
-                if grep -r --include=\*.{js,jsx,ts,tsx} -E "category\.(label|description).*startsWith.*['\"]com_" "$DIR" > /dev/null 2>&1 || \
-                   # Check for the method that defines these keys
-                   grep -r --include=\*.{js,jsx,ts,tsx} "ensureDefaultCategories" "$DIR" > /dev/null 2>&1 || \
-                   # Check for direct usage in agentCategory.ts
-                   grep -r --include=\*.ts -E "label:.*['\"]$KEY['\"]" "$DIR" > /dev/null 2>&1 || \
-                   grep -r --include=\*.ts -E "description:.*['\"]$KEY['\"]" "$DIR" > /dev/null 2>&1; then
-                  FOUND=true
-                  break
-                fi
-              done
-              
-              # Also check if the key is directly used somewhere
-              if [[ "$FOUND" == false ]]; then
-                for DIR in "${SOURCE_DIRS[@]}"; do
-                  if grep -r --include=\*.{js,jsx,ts,tsx} -q "$KEY" "$DIR"; then
-                    FOUND=true
-                    break
-                  fi
-                done
-              fi
-            else
-              # Regular check for other keys
-              for DIR in "${SOURCE_DIRS[@]}"; do
-                if grep -r --include=\*.{js,jsx,ts,tsx} -q "$KEY" "$DIR"; then
-                  FOUND=true
-                  break
-                fi
-              done
-            fi
+            done
           
             if [[ "$FOUND" == false ]]; then
               UNUSED_KEYS+=("$KEY")
